<?xml version="1.0"?>
<package format="2">

  <name>rospix_utils</name>
  <version>1.0.0</version>
  <description>ROS package with basic utilities for controlling the rospix ROS node.</description>

  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>GPLv3</license>

  <url type="website">https://github.com:rospix/utils</url>

  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>libopencv-dev</depend>
  <depend>message_runtime</depend>
  <depend>image_transport</depend>
  <depend>rospy</depend>
  <depend>cv_bridge</depend>
  <depend>mrs_lib</depend>
  <depend>rad_msgs</depend>

  <export>
  </export>
</package>
